Bug 62864 - ENABLE_FIRMWARE not defined for C sources
Summary: ENABLE_FIRMWARE not defined for C sources
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-28 12:56 UTC by Michał Górny
Modified: 2013-03-28 14:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Michał Górny 2013-03-28 12:56:54 UTC
commit 61e536e1b7f3a7448428a05bafe1ea64d7e51938
Author: Kay Sievers <kay@vrfy.org>
Date:   Mon Mar 18 15:22:32 2013 +0100

    udev: ifdef all firmware special handling

It did ifdef all the code but didn't add any AC_DEFINE, so the code is never enabled now (there's only AM_CONDITIONAL for it which doesn't get spread to the C compiler).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.