build-sys: fix HAVE/ENABLE_FIRMWARE

https://bugs.freedesktop.org/show_bug.cgi?id=62864